# ArduinoFramework

./: CMakeLists.txt  avr-toolchain.cmake  build.sh  main.cpp
cmake/: avr-toolchain.cmake
include/: fw.h
include/board/: board.h  board_def.h  nano.h  uno.h
include/hal/: core.h  external_interrupt.h  gpio.h  hal.h  hooks.h  pin_io.h  timer.h
include/patterns/: patterns.h
include/sys/: sys.h  sys_timers.h
scripts/: build.sh
src/: main.cpp
src/board/: board.h  nano.h
src/hal/: external_interrupt.cpp  hal.h  pin_io.h  timer.cpp
src/sys/: sys.cpp  sys_timers.cpp
